--- a/www/.htaccess
+++ b/www/.htaccess
@@ -5,6 +5,6 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule !\.(css|js|icon|zip|rar|png|jpg|gif|pdf|mp3|mp4|txt|js)$ index.php [L]
+RewriteRule !\.(css|js|icon|zip|rar|png|jpg|gif|pdf|mp3|mp4|txt|js|mcworld)$ index.php [L]
 
 AddType application/x-httpd-php .php .phtml
