--- a/www/.htaccess
+++ b/www/.htaccess
@@ -8,3 +8,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule !\.(css|js|icon|zip|rar|png|jpg|gif|pdf|mp3|mp4|txt|js|mcworld)$ index.php [L]
 
 AddType application/x-httpd-php .php .phtml
+
+<FilesMatch "\.(css|js)$">
+    Header set Cache-Control "max-age=2400, must-revalidate"
+</FilesMatch>
